--- a/index.html
+++ b/index.html
@@ -1,10 +1,133 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<!-- saved from url=(0025)https://niaobi.github.io/ -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Template Mo">
+    <link href="static/css" rel="stylesheet">
+
+    <title>拉屎不冲,天理难容</title>
+    <!--
+
+    ART FACTORY
+
+    https://templatemo.com/tm-537-art-factory
+
+    -->
+    <!-- Additional CSS Files -->
+    <link rel="stylesheet" type="text/css" href="static/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="static/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="static/templatemo-art-factory.css">
+    <link rel="stylesheet" type="text/css" href="static/owl-carousel.css">
+
 </head>
+
 <body>
-index-test
-</body>
-</html>
+
+<!-- ***** Preloader End ***** -->
+
+
+<!-- ***** Header Area Start ***** -->
+<header class="header-area header-sticky">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <nav class="main-nav">
+                    <!-- ***** Logo Start ***** -->
+                    <a href="https://niaobi.github.io/#" class="logo">屎币</a>
+                    <!-- ***** Logo End ***** -->
+                    <!-- ***** Menu Start ***** -->
+                    <ul class="nav">
+                        <li class="scroll-to-section"><a href="https://niaobi.github.io/#welcome" class="">首页</a></li>
+                        <li class="scroll-to-section"><a href="https://niaobi.github.io/#allocation">代币模型</a></li>
+                    </ul>
+                    <!-- ***** Menu End ***** -->
+                </nav>
+            </div>
+        </div>
+    </div>
+</header>
+<!-- ***** Header Area End ***** -->
+
+
+<!-- ***** Welcome Area Start ***** -->
+<div class="welcome-area" id="welcome">
+
+    <!-- ***** Header Text Start ***** -->
+    <div class="header-text">
+        <div class="container">
+            <div class="row">
+                <div class="left-text col-lg-8 col-md-8 col-sm-12 col-xs-12" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s" data-scroll-reveal-id="1" data-scroll-reveal-initialized="true" data-scroll-reveal-complete="true">
+                    <h1>拉屎不冲,天理难容</h1>
+                    <p>马桶不是大胃王,吞了异物会抓狂</p>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s" data-scroll-reveal-id="2" data-scroll-reveal-initialized="true" data-scroll-reveal-complete="true">
+                    <img src="static/slider-icon.png" class="rounded img-fluid d-block mx-auto" alt="First Vector Graphic">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- ***** Header Text End ***** -->
+</div>
+
+
+<!-- ***** Frequently Question Start ***** -->
+<section class="section" id="allocation">
+    <div class="container">
+        <!-- ***** Section Title Start ***** -->
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="section-heading">
+                    <h2>代币分发模型</h2>
+                </div>
+            </div>
+            <div class="offset-lg-3 col-lg-6">
+                <div class="section-heading">
+                    <p>shi币在币安智能链上发行，代币总量一万亿，其中五千亿已空投至V神地址永久锁仓，参见<a href="https://bscscan.com/tx/0x6a60d2babc3a36d3a126481ac84edeecd3bca4388b2cf4bdc7e8450ebe373fcc" target="_blank">交易哈希</a>，剩余份额一部分添加至pancake流动池。，一部分归团队所有。合约地址为：0x6486da13eaf429e81384dbe896fb0c655e52dd3c。购买链接为<a href="https://exchange.pancakeswap.finance/#/swap?inputCurrency=0xe9e7cea3dedca5984780bafc599bd69add087d56&amp;outputCurrency=0x6486da13eaf429e81384dbe896fb0c655e52dd3c" target="_blank">Pancake</a>
+                    </p></div>
+            </div>
+        </div>
+        <!-- ***** Section Title End ***** -->
+    </div>
+</section>
+<!-- ***** Frequently Question End ***** -->
+
+
+<!-- ***** Footer Start ***** -->
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-7 col-md-12 col-sm-12">
+                <p class="copyright">Copyright © shi币发行团队。模板设计：<a rel="nofollow" href="https://templatemo.com/">TemplateMo</a></p>
+            </div>
+            <div class="col-lg-5 col-md-12 col-sm-12">
+                <ul class="social">
+                    <li><a href="https://twitter.com/NiaobiCoin" target="_blank">推特</a></li>
+                    <li><a href="https://t.me/niaobi" target="_blank">电报</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<!-- jQuery -->
+<script src="static/jquery-2.1.0.min.js.下载"></script>
+
+<!-- Bootstrap -->
+<script src="static/popper.js.下载"></script>
+<script src="static/bootstrap.min.js.下载"></script>
+
+<!-- Plugins -->
+<script src="static/owl-carousel.js.下载"></script>
+<script src="static/scrollreveal.min.js.下载"></script>
+<script src="static/waypoints.min.js.下载"></script>
+<script src="static/jquery.counterup.min.js.下载"></script>
+<script src="static/imgfix.min.js.下载"></script>
+
+<!-- Global Init -->
+<script src="static/custom.js.下载"></script>
+
+
+</body></html>
