--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <!-- saved from url=(0025)https://niaobi.github.io/ -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -59,12 +61,17 @@
     <div class="header-text">
         <div class="container">
             <div class="row">
-                <div class="left-text col-lg-8 col-md-8 col-sm-12 col-xs-12" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s" data-scroll-reveal-id="1" data-scroll-reveal-initialized="true" data-scroll-reveal-complete="true">
+                <div class="left-text col-lg-8 col-md-8 col-sm-12 col-xs-12"
+                     data-scroll-reveal="enter left move 30px over 0.6s after 0.4s" data-scroll-reveal-id="1"
+                     data-scroll-reveal-initialized="true" data-scroll-reveal-complete="true">
                     <h1>拉屎不冲,天理难容</h1>
                     <p>马桶不是大胃王,吞了异物会抓狂</p>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s" data-scroll-reveal-id="2" data-scroll-reveal-initialized="true" data-scroll-reveal-complete="true">
-                    <img src="static/slider-icon.png" class="rounded img-fluid d-block mx-auto" alt="First Vector Graphic">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"
+                     data-scroll-reveal="enter right move 30px over 0.6s after 0.4s" data-scroll-reveal-id="2"
+                     data-scroll-reveal-initialized="true" data-scroll-reveal-complete="true">
+                    <img src="static/slider-icon.png" class="rounded img-fluid d-block mx-auto"
+                         alt="First Vector Graphic">
                 </div>
             </div>
         </div>
@@ -85,7 +92,11 @@
             </div>
             <div class="offset-lg-3 col-lg-6">
                 <div class="section-heading">
-                    <p>shi币在币安智能链上发行，代币总量一万亿，其中五千亿已空投至V神地址永久锁仓，参见<a href="https://bscscan.com/tx/0x6a60d2babc3a36d3a126481ac84edeecd3bca4388b2cf4bdc7e8450ebe373fcc" target="_blank">交易哈希</a>，剩余份额一部分添加至pancake流动池。，一部分归团队所有。合约地址为：0x6486da13eaf429e81384dbe896fb0c655e52dd3c。购买链接为<a href="https://exchange.pancakeswap.finance/#/swap?inputCurrency=0xe9e7cea3dedca5984780bafc599bd69add087d56&amp;outputCurrency=0x6486da13eaf429e81384dbe896fb0c655e52dd3c" target="_blank">Pancake</a>
+                    <p>shi币在币安智能链上发行，代币总量一万亿，其中，Sam 孙哥都有空投
+                        <!--<a href="" target="_blank">交易哈希</a>，
+                        剩余份额一部分添加至pancake流动池。，一部分归团队所有。合约地址为：0x6486da13eaf429e81384dbe896fb0c655e52dd3c。购买链接为
+                        <a href="https://exchange.pancakeswap.finance/#/swap?inputCurrency=0xe9e7cea3dedca5984780bafc599bd69add087d56&amp;outputCurrency=0x6486da13eaf429e81384dbe896fb0c655e52dd3c"
+                                target="_blank">Pancake</a>-->
                     </p></div>
             </div>
         </div>
@@ -100,7 +111,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-7 col-md-12 col-sm-12">
-                <p class="copyright">Copyright © shi币发行团队。模板设计：<a rel="nofollow" href="https://templatemo.com/">TemplateMo</a></p>
+                <p class="copyright">Copyright © shi币发行团队。模板设计：<a rel="nofollow" href="https://templatemo.com/">TemplateMo</a>
+                </p>
             </div>
             <div class="col-lg-5 col-md-12 col-sm-12">
                 <ul class="social">
@@ -130,4 +142,5 @@
 <script src="static/custom.js.下载"></script>
 
 
-</body></html>
+</body>
+</html>
