--- a/index.html
+++ b/index.html
@@ -93,11 +93,9 @@
             <div class="offset-lg-3 col-lg-6">
                 <div class="section-heading">
                     <p>shi币在币安智能链上发行，代币总量一万亿，其中，Sam 孙哥都有空投
-                        <!--<a href="" target="_blank">交易哈希</a>，
-                        剩余份额一部分添加至pancake流动池。，一部分归团队所有。合约地址为：0x6486da13eaf429e81384dbe896fb0c655e52dd3c。购买链接为
-                        <a href="https://exchange.pancakeswap.finance/#/swap?inputCurrency=0xe9e7cea3dedca5984780bafc599bd69add087d56&amp;outputCurrency=0x6486da13eaf429e81384dbe896fb0c655e52dd3c"
-                                target="_blank">Pancake</a>-->
-                    </p></div>
+
+                    </p>
+                </div>
             </div>
         </div>
         <!-- ***** Section Title End ***** -->
