--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
                 <div class="section-heading">
                     <p>shi币在币安智能链上发行，代币总量一万亿，其中，Sam 孙哥都有空投
 
+
+                        合约地址:0x84d34f4f83a87596cd3fb6887cff8f17bf5a7b83
+
                     </p>
                 </div>
             </div>
@@ -109,15 +112,10 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-7 col-md-12 col-sm-12">
-                <p class="copyright">Copyright © shi币发行团队。模板设计：<a rel="nofollow" href="https://templatemo.com/">TemplateMo</a>
+                <p class="copyright">Copyright © shi币发行团队。
                 </p>
             </div>
-            <div class="col-lg-5 col-md-12 col-sm-12">
-                <ul class="social">
-                    <li><a href="https://twitter.com/NiaobiCoin" target="_blank">推特</a></li>
-                    <li><a href="https://t.me/niaobi" target="_blank">电报</a></li>
-                </ul>
-            </div>
+
         </div>
     </div>
 </footer>
