--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
-                        <li class="scroll-to-section"><a href="https://niaobi.github.io/#welcome" class="">首页</a></li>
-                        <li class="scroll-to-section"><a href="https://niaobi.github.io/#allocation">代币模型</a></li>
+                        <li class="scroll-to-section"><a href="https://dj666666.github.io/test/index.html" class="">首页</a></li>
+                        <li class="scroll-to-section"><a href="https://dj666666.github.io/#allocation">代币模型</a></li>
                     </ul>
                     <!-- ***** Menu End ***** -->
                 </nav>
